# likha

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  demo2_manifest.json  demo_manifest.json  docker-entrypoint.sh
server/.cargo/: config.toml
server/entity/: Cargo.toml
server/entity/src/: activity_logs.rs  answer_key_acceptable_answers.rs  answer_keys.rs  assessment_questions.rs  assessment_submissions.rs  assessments.rs  assignment_submissions.rs  assignments.rs  assignments_hw.rs  attendance_records.rs  change_log.rs  class_enrollments.rs  class_participants.rs  classes.rs  core_values.rs  core_values_records.rs  database_metadata.rs  enumeration_item_answers.rs  enumeration_items.rs  grade_components_config.rs  grade_items.rs  grade_record.rs  grade_scores.rs  learner_details.rs  learning_materials.rs  lib.rs  login_attempts.rs  material_files.rs  period_grades.rs  previous_school_attendance.rs  previous_school_subjects.rs  previous_school_term_grades.rs  quarterly_grades.rs  question_choices.rs  question_correct_answers.rs  refresh_tokens.rs  replication_state.rs  school_details.rs  school_settings.rs  student_school_history.rs  (+12 more)
server/migrations/: Cargo.toml
server/migrations/src/: add_last_modified_timestamps.rs  add_processed_operations.rs  add_soft_delete_columns.rs  add_updated_at_to_assessment_submissions.rs  add_updated_at_to_questions.rs  create_activity_logs_table.rs  create_assessment_tables.rs  create_assignment_tables.rs  create_change_log_table.rs  create_class_enrollments_table.rs  create_classes_table.rs  create_database_metadata_table.rs  create_learning_materials_tables.rs  create_login_attempts_table.rs  create_refresh_tokens_table.rs  create_sync_infrastructure_tables.rs  create_users_table.rs  lib.rs  m20260305_000001_schema_v2.rs  m20260308_000001_add_order_index.rs  m20260313_000001_schema_v3.rs  m20260315_migrate_file_storage.rs  m20260316_000001_drop_file_data_columns.rs  m20260316_000002_float_submission_score.rs  m20260322_000001_grading_system.rs  m20260322_000002_advisory_and_tos.rs  m20260329_000001_create_school_settings.rs  m20260408_000001_tos_enhancements.rs  m20260408_000002_tos_blooms_percentages.rs  m20260412_000001_erd_alignment.rs  m20260420_000001_full_melcs.rs  m20260606_000001_add_class_participants_composite_index.rs  m20260606_000002_add_performance_indexes.rs  m20260606_000003_add_assessment_stats_indexes.rs  m20260606_000004_add_batch_query_indexes.rs  m20260618_000001_drop_tos_unique.rs  m20260618_000002_add_district_to_school_settings.rs  m20260618_000003_create_learner_details.rs  m20260618_000004_rename_quarterly_assessment_component.rs  (+16 more)
server/src/: db.rs  lib.rs  main.rs
server/src/cache/: mod.rs  (+4 more)
(+4497 files in other folders)
