[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace", "timeout", "limit"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
regex = "1.11"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"
base64 = "0.22"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
entity = { path = "entity" }
migration = { path = "migrations" }
async-trait = "0.1"

[dev-dependencies]
# mockall = "0.13"  # not yet vendored; trait-based mock tests scaffolded but guarded by #[cfg(feature = "mock_tests")]
# tokio-test, pretty_assertions, serial_test intentionally omitted:
# the project uses a vendor directory and these crates are not vendored yet.
# #[tokio::test] works via the already-vendored tokio crate (features = ["full"]).